generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DATABASE_URL_UNPOOLED")
}

enum UserRole {
  MASTER
  ADMIN
}

enum LandingPageStatus {
  draft
  published
}

enum NpsResponseStatus {
  pending
  approved
  rejected
}

enum TestimonialStatus {
  pending
  approved
  rejected
}

model User {
  id                   String        @id @default(cuid())
  name                 String
  email                String        @unique
  passwordHash         String
  role                 UserRole
  isActive             Boolean       @default(true)
  createdAt            DateTime      @default(now())
  updatedAt            DateTime      @updatedAt
  pagesUpdated         LandingPage[] @relation("LandingPageUpdatedBy")
  pagesPublished       LandingPage[] @relation("LandingPagePublishedBy")
  createdAssets        Asset[]
  blogArticles         BlogArticle[] @relation("BlogArticleAuthor")
  reviewedNpsResponses NpsResponse[] @relation("NpsResponseReviewedBy")
  reviewedTestimonials Testimonial[] @relation("TestimonialReviewedBy")
}

model LandingPage {
  id               String            @id @default(cuid())
  slug             String            @unique
  title            String
  seoTitle         String?
  seoDescription   String?
  status           LandingPageStatus @default(draft)
  draftContent     Json
  publishedContent Json?
  publishedAt      DateTime?
  updatedAt        DateTime          @updatedAt
  createdAt        DateTime          @default(now())
  updatedById      String
  updatedBy        User              @relation("LandingPageUpdatedBy", fields: [updatedById], references: [id])
  publishedById    String?
  publishedBy      User?             @relation("LandingPagePublishedBy", fields: [publishedById], references: [id])
}

model BlogArticle {
  id             String   @id @default(cuid())
  title          String
  slug           String   @unique
  content        String
  categorySlug   String
  headerImageUrl String?
  headerImageAlt String?
  publishedAt    DateTime @default(now())
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  authorId       String
  author         User     @relation("BlogArticleAuthor", fields: [authorId], references: [id])

  @@index([categorySlug])
  @@index([publishedAt])
}

model Contact {
  id               String   @id @default(cuid())
  fullName         String
  email            String
  phone            String
  companyName      String
  city             String
  state            String
  service          String?
  message          String?
  hasBeenContacted Boolean  @default(false)
  createdAt        DateTime @default(now())

  @@index([createdAt])
}

model NpsResponse {
  id           String            @id @default(cuid())
  authorName   String
  authorRole   String?
  companyName  String?
  score        Int
  comment      String
  question     String?
  status       NpsResponseStatus @default(pending)
  createdAt    DateTime          @default(now())
  reviewedAt   DateTime?
  reviewedById String?
  reviewedBy   User?             @relation("NpsResponseReviewedBy", fields: [reviewedById], references: [id])

  @@index([status, createdAt])
  @@index([createdAt])
}

model Testimonial {
  id                   String            @id @default(cuid())
  authorName           String
  authorRole           String?
  companyName          String?
  rating               Int
  comment              String
  question             String?
  profileImageUrl      String?
  profileImagePathname String?
  reviewImageUrl       String?
  reviewImagePathname  String?
  status               TestimonialStatus @default(pending)
  createdAt            DateTime          @default(now())
  reviewedAt           DateTime?
  reviewedById         String?
  reviewedBy           User?             @relation("TestimonialReviewedBy", fields: [reviewedById], references: [id])

  @@index([status, createdAt])
  @@index([createdAt])
}

model Asset {
  id               String   @id @default(cuid())
  kind             String
  entityType       String
  entityId         String
  sectionKey       String?
  fieldKey         String?
  slot             Int?
  pathname         String
  url              String
  mimeType         String
  sizeBytes        Int
  originalFilename String?
  alt              String?
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt
  createdById      String
  createdBy        User     @relation(fields: [createdById], references: [id])

  @@index([pathname])
  @@index([url])
  @@index([entityType, entityId, sectionKey, fieldKey, slot])
}
